# oxyads

./: README.md
contract/: Cargo.toml  README.md
contract/src/: lib.rs  views.rs
oxyads-back/: Makefile  README.md  app.const.js  app.js  package-lock.json  package.json  sequelizerc.js
oxyads-back/config/: config.js  constant.js  country-currency.json  jwt.js
oxyads-back/config/cert/: jwt256.key.pub.sample  jwt256.key.sample
oxyads-back/public/css/: access.css  custom.css  forbidden.css  style.min.css  validate.css
oxyads-back/public/js/: pcoded.min.js
oxyads-back/src/controllers/: item.controller.js  market.controller.js  setting.controller.js  user.controller.js
oxyads-back/src/middlewares/: authentication.js
oxyads-back/src/routes/: item.route.js  market.route.js  setting.route.js  user.route.js
oxyads-back/src/test/: api.test.js  app.test.js
oxyads-back/src/util/: auth.js  bcrypt.js  browser.js  category.js  highlight.js  index.js  item.js  item_stats.js  jobHistInfo.js  jwt.js  mail.js  redis.js  (+8 more)
oxyads-web/: .gitignore  README.md  config-overrides.js  package-lock.json  package.json
oxyads-web/public/: index.html
oxyads-web/src/: index.js  near-api.js  near-config.js
oxyads-webextension/: README.md  package.json  webpack.config.js
oxyads-webextension/src/: manifest.json  privacy_general.txt  rules.json
recommendation-cb/: Dockerfile  README.md  app.py  docker-compose.yml  runserver.sh
recommendation-cb/app/: __init__.py  init_db.py  views.py
recommendation-cb/dataset/: favorite.csv
recommendation-cb/requirements/: dev.pip
(+65 files in other folders)
